--- a/src/GCF/FrontBundle/Resources/views/Default/green-blogger.html.twig
+++ b/src/GCF/FrontBundle/Resources/views/Default/green-blogger.html.twig
@@ -1,5 +1,7 @@
 {% extends '@GCFFront/base.html.twig' %}
 
+{% block title %} GCF - {{ pageTitle }} {% endblock %}
+
 {% block body %}
 <h1>Green Blogger Page</h1>
 {% endblock %}
