--- a/src/GCF/FrontBundle/Resources/views/Default/Projects/projects.html.twig
+++ b/src/GCF/FrontBundle/Resources/views/Default/Projects/projects.html.twig
@@ -1,4 +1,7 @@
 {% extends '@GCFFront/base.html.twig' %}
+
+{% block title %} GCF - {{ pageTitle }} {% endblock %}
+
 {% block stylesheets %}
     {#<link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap.min.css">#}
     <link rel="stylesheet" href="{{ asset('assets/DataTables/datatables.css') }}">
@@ -11,9 +14,64 @@
         .paginate_button.previous, .paginate_button.next{ display: none; }
 
         .filter_container{margin: 10px 0; padding: 0; border-left: solid #22AA86;}
-        .filter_select_projects{padding-top: 5px;padding-bottom: 5px; width: 100%; max-width:100%; margin: 5px 0;}
+        .filter_select_projects{padding-top: 5px;padding-bottom: 5px; width: 100%; max-width:100%; margin: 5px 0; padding: 5px 5px !important; margin: 5px 0; outline: none; font-weight: 600}
         .filter_select_projects option{color:gray}
         #myTable thead tr{background: #22AA86; color: white;}
+    </style>
+
+    <style>
+        .page_overlay{
+            display: none;
+            position: fixed;
+            z-index: 1001;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            margin: auto;
+            background: rgba(0, 0, 0, 0.4);
+        }
+
+        .popup_details_container{
+            display: none;
+            position: fixed;
+            z-index: 1001;
+            margin: auto;
+            top: 0;
+            bottom: 0;
+            right: 0;
+            left: 0;
+            background: white;
+            height: -moz-max-content;
+            height: -webkit-max-content;
+            height: max-content;
+            width: 500px;
+            border-radius: 2px;
+            border: solid 1px #7ac943;
+        }
+
+        .popup_details_container .close_popup{
+            position: absolute;
+            top: -6px;
+            right: -5px;
+            font-size: 20px;
+            color: red;
+            cursor: pointer;
+        }
+
+        .popup_details_container_inner{
+            padding: 20px;
+        }
+        .popup_details_container_inner table{
+            margin-bottom: 0;
+        }
+        .project_name_show{
+            color:#7ac943;
+            cursor: pointer;
+        }
+        .popup_details_container_inner .line_name{
+            font-weight: 600;
+        }
     </style>
 {% endblock %}
 {% block body %}
@@ -79,7 +137,7 @@
                 {% for project in projects %}
                     <tr>
                         <td>
-                            <a href="{{ path('gcf_front_projectsinglepage', {'id': project.id} ) }}">{{ project.nom }}</a>
+                            <p class="project_name_show" onclick="showDetails( {{ project.id }} )">{{ project.nom }}</p>
                         </td>
 
                         <td>
@@ -119,6 +177,16 @@
             </tbody>
         </table>
     </div>
+
+
+    <div class="page_overlay" onclick="closePop()">
+
+    </div>
+    <div class="popup_details_container">
+        <i class="fa fa-times-circle close_popup" aria-hidden="true" onclick="closePop()"></i>
+        <div class="popup_details_container_inner"></div>
+    </div>
+
 
 {% endblock %}
 
@@ -182,5 +250,82 @@
                         .draw();
                 });
         } );
+    </script>
+
+
+    <script>
+        {#{{ path('gcf_front_projectsinglepage', {'id': project.id} ) }}#}
+        function showDetails(id){
+
+            $('.page_overlay').css('display', 'block');
+            url = '{{ path('gcf_front_projectsinglepage', {'id': 'id'} ) }}';
+            url = url.replace("id", id);
+            //console.log(url);
+            $.ajax({
+                url: url,
+                data: {'details-projet': 'test'},
+                type: 'POST',
+                dataType: 'json',
+                success: function (result) {
+                    console.log(result);
+
+                    $('.popup_details_container').css('display', 'block');
+
+                    var toAppend = '';
+                    toAppend = '<table class="table table-striped table-bordered">';
+                    toAppend +=  '<thead></thead>';
+                    toAppend +=  '<tbody>';
+                    toAppend +=  '<tr>';
+                    toAppend +=  '<td colspan = "2" style="text-align:center; font-weight:600">'+result.nom+'</td>';
+                    toAppend +=  '</tr>';
+                    toAppend +=  '<tr>';
+                    toAppend +=  '<td class="line_name">Description</td>';
+                    toAppend +=  '<td>'+result.description+'</td>';
+                    toAppend +=  '</tr>';
+                    toAppend +=  '<tr>';
+                    toAppend +=  '<td class="line_name">Secteur</td>';
+                    toAppend +=  '<td>'+result.secteurProjet+'</td>';
+                    toAppend +=  '</tr>';
+                    toAppend +=  '<tr>';
+                    toAppend +=  '<td class="line_name">Acteur</td>';
+                    toAppend +=  '<td>'+result.acteur+'</td>';
+                    toAppend +=  '</tr>';
+                    toAppend +=  '<tr>';
+                    toAppend +=  '<td class="line_name">Focus</td>';
+                    toAppend +=  '<td>'+result.focus+'</td>';
+                    toAppend +=  '</tr>';
+                    toAppend +=  '<tr>';
+                    toAppend +=  '<td class="line_name">Gouvernorat</td>';
+                    toAppend +=  '<td>'+result.gouvernorat+'</td>';
+                    toAppend +=  '</tr>';
+                    toAppend +=  '</tbody>';
+                    toAppend +=  '</table>';
+
+                    $('.popup_details_container_inner').append(toAppend);
+
+                },
+                error: function (error) {
+                    alert(error);
+                    console.log(error);
+                }
+            });
+
+
+        }
+
+        function closePop() {
+
+            $('.page_overlay').css('display', 'none');
+
+            $('.popup_details_container_inner').empty();
+
+            $('.popup_details_container').css('display', 'none');
+
+        }
+
+
+
+
+
     </script>
 {% endblock %}
