--- a/src/GCF/FrontBundle/Resources/views/Default/Publications/publications.html.twig
+++ b/src/GCF/FrontBundle/Resources/views/Default/Publications/publications.html.twig
@@ -1,10 +1,12 @@
 {% extends '@GCFFront/base.html.twig' %}
 
-{% block title %} Publications {% endblock %}
-{% block body %}
+{% block title %} GCF | {{ pageTitle }} {% endblock %}
+
+{% block stylesheets %}
+
     <style>
         .nav_our_and_green_blogger {
-            margin-bottom: 40px;
+            margin-bottom: 30px !important;
         }
 
         .nav_our_and_green_blogger li {
@@ -23,22 +25,84 @@
         #autres_pub_tab_container{
             display:none;
         }
+    </style>
+    <style>
+        .page_overlay{
+            display: none;
+            position: fixed;
+            z-index: 1001;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            margin: auto;
+            background: rgba(0, 0, 0, 0.4);
+        }
+
+        .popup_details_container{
+            display: none;
+            position: absolute;
+            z-index: 1001;
+            margin: auto;
+            top: 45px;
+            right: 0;
+            left: 0;
+            background: white;
+            height: -moz-max-content;
+            height: -webkit-max-content;
+            height: max-content;
+            width: 500px;
+            border-radius: 2px;
+            border: solid 1px #7ac943;
+        }
+
+        .popup_details_container .close_popup{
+            position: absolute;
+            top: -6px;
+            right: -5px;
+            font-size: 20px;
+            color: red;
+            cursor: pointer;
+        }
+
+        .popup_details_container_inner{ padding: 20px; }
+
+        .popup_details_container_inner table{ margin-bottom: 0; }
+
+        .form-control{border-radius: 2px !important;}
+
+        .form-group label.control-label{ text-align: unset !important; }
+
+        #Article-content{ min-width: 100%; max-width: 100%; }
+
+        .form-group button{ width: 100%; }
 
 
+        .nav_our_and_green_blogger li a h2{
+            font-weight: inherit ;
+            font-size: inherit;
+            line-height: inherit;
+            margin: inherit;
+        }
+
+        #gb_article_content{width: 100% !important;}
+
+        .post_title{color:#333 }
+        .post_title:hover{ text-decoration: none; color:#333 }
     </style>
 
+{% endblock %}
+{% block body %}
 
-
-    <h1>Page publications</h1>
 
     <div>
         <div class="col-md-12">
             <ul class="nav nav-tabs nav_our_and_green_blogger">
-                <li class="active" id="our_pub_tab"><a>Nos Publications</a></li>
-                <li id="green_blogger_pub_tab"><a>Green bloggeur Publications</a></li>
-                <li id="autres_pub_tab"><a>Autres</a></li>
+                <li class="active" id="our_pub_tab"><a><h2>Nos Publications</h2></a></li>
+                <li id="green_blogger_pub_tab"><a><h2>Green bloggeur Publications</h2></a></li>
+                <li id="autres_pub_tab"><a><h2>Autres</h2></a></li>
                 <div class="navbar-right">
-                    <a class="btn btn-default " data-toggle="modal" data-target="#myModal">+ Green Blogger</a>
+                    <a class="btn btn-default" onclick="showDetails(1)">+ Green Blogger</a>
                 </div>
             </ul>
         </div>
@@ -47,22 +111,20 @@
 
             {% for publication in publications %}
 
-
                 <div class="col-md-6 col-sm-6 col-xs-12"
                      style="background: whitesmoke;border: solid white; padding-top: 10px; padding-bottom:10px ">
                     <div class="row">
                         <div class="col-md-5">
-                            <a href="#">
-                                <img src="http://placehold.it/200x200" class="img-responsive" style="width: 100%;" />
+                            <a href="{{ path('gcf_front_single_publications_page',{'id': publication.id}) }}" title="{{ publication.titre }}">
+                                <img src="http://placehold.it/200x200" class="img-responsive" style="width: 100%;"  alt="title="{{ publication.titre }}"" />
                             </a>
                         </div>
                         <div class="col-md-7">
-                            <h4 class="name">{{ publication.titre }}</h4>
-                            <h6 class="name"><strong>Date :</strong> 2009</h6>
+                            <h4><a href="{{ path('gcf_front_single_publications_page',{'id': publication.id}) }}" class="post_title" title="{{ publication.titre }}">{{ publication.titre }}</a></h4>
+                            <h6><strong>Date :</strong> 2009</h6>
                             <p class="description" style="font-size: 13px;">{{ publication.contenu|slice(0, 62) }}...</p>
                             <p style="width: 100%; text-align: right">
-                                <a href="#" style="padding: 5px; background: #22AA86; color: white; text-decoration: none">
-                                    Lire la suite. </a>
+                                <a href="{{ path('gcf_front_single_publications_page',{'id': publication.id}) }}" class="button_see_more">Lire la suite. </a>
                             </p>
                         </div>
                     </div>
@@ -79,10 +141,14 @@
                 <div class="col-md-6 col-sm-6 col-xs-12"
                      style="background: #f2fffc;border: solid white; padding-top: 10px; padding-bottom:10px ">
                     <div class="row">
-                        <div class="col-md-5"><a href="#"><img src="http://placehold.it/200x200" class="img-responsive"/></a></div>
+                        <div class="col-md-5">
+                            <a href="#" title="Titre">
+                                <img src="http://placehold.it/200x200" class="img-responsive" alt="Titre"/>
+                            </a>
+                        </div>
                         <div class="col-md-7">
-                            <h4 class="name">Publication Titre</h4>
-                            <h6 class="name"><strong>Date :</strong> 2009</h6>
+                            <h4><a href="#" class="post_title" title="Titre">Publication Titre</a></h4>
+                            <h6><strong>Date :</strong> 2009</h6>
                             <p class="description" style="font-size: 13px;">Aenean tortor est, vulputate quis leo in,
                                 vehicula rhoncus lacus.</p>
                             <p style="width: 100%; text-align: right">
@@ -102,9 +168,13 @@
                 <div class="col-md-6 col-sm-6 col-xs-12"
                      style=" background: rgba(255,239,0,0.1);border: solid white; padding-top: 10px; padding-bottom:10px ">
                     <div class="row">
-                        <div class="col-md-5"><a href="#"><img src="http://placehold.it/200x200" class="img-responsive"/></a></div>
+                        <div class="col-md-5">
+                            <a href="#" title="TITRE">
+                                <img src="http://placehold.it/200x200" class="img-responsive" alt="TITRE" />
+                            </a>
+                        </div>
                         <div class="col-md-7">
-                            <h4 class="name">Publication {{ i }} Titre</h4>
+                            <h4 class="post_title"><a href="#" title="TITRE">Publication {{ i }} Titre</a></h4>
                             <h6 class="name"><strong>Date :</strong> 2009</h6>
                             <p class="description" style="font-size: 13px;">Aenean tortor est, vulputate quis leo in,
                                 vehicula rhoncus lacus.</p>
@@ -124,38 +194,68 @@
 
 
 
+    <div class="page_overlay" onclick="closePop()">
+
+    </div>
+    <div class="popup_details_container">
+        <i class="fa fa-times-circle close_popup" aria-hidden="true" onclick="closePop()"></i>
+        <div class="popup_details_container_inner">
 
 
 
-    <!-- Modal -->
-    <div class="modal fade" id="myModal" role="dialog"  style="overflow-y: scroll;">
-        <div class="modal-dialog">
 
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Green blogger editor</h4>
-                </div>
-                <div class="modal-body" style="min-height: 400px;">
-                    <textarea name="" id="" rows="20" style="width: 100%;">
+            <div >
+                <h2><strong><center>Green Blogger</center></strong></h2>
+                <form class="form-horizontal" action="" method="post">
+                    <div class="form-group">
+                        <label class="control-label col-sm-12" for="gb_name">Nom:</label>
+                        <div class="col-sm-12">
+                            <input type="text" class="form-control" id="gb_name" placeholder="Enter votre nom" name="gb_name">
+                        </div>
+                    </div>
 
+                    <div class="form-group">
+                        <label class="control-label col-sm-12" for="gb_email">Email:</label>
+                        <div class="col-sm-12">
+                            <input type="email" class="form-control" id="gb_email" placeholder="Entrer votre email" name="gb_email">
+                        </div>
+                    </div>
+                    <h3><center><strong>Article</strong></center></h3>
+                    <div class="form-group">
+                        <label class="control-label col-sm-12" for="gb_article_title">Title:</label>
+                        <div class="col-sm-12">
+                            <input type="text" class="form-control" id="gb_article_title" placeholder="" name="gb_article_title">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-sm-12" for="gb_article_content">Content:</label>
+                        <div class="col-sm-12">
+                            <textarea class="form-control" rows="10" name="gb_article_content" id="gb_article_content"></textarea>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-sm-12" for="gb_article_project">Projet:</label>
+                        <div class="col-sm-12">
+                            <select class="form-control" id="gb_article_project" name="gb_article_project">
+                                <option></option>
+                                <option>2</option>
+                                <option>3</option>
+                                <option>4</option>
+                            </select>
+                        </div>
+                    </div>
 
-                    </textarea>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
+                    <div class="form-group">
+                        <div class=" col-sm-12">
+                            <button type="submit" class="btn btn-default">Submit</button>
+                        </div>
+                    </div>
+                </form>
             </div>
+
 
         </div>
     </div>
-
-
-
-
-
-
 {% endblock %}
 
 {% block javascripts %}
@@ -196,6 +296,50 @@
 
         });
 
+    </script>
+
+
+    <script>
+        {#{{ path('gcf_front_projectsinglepage', {'id': project.id} ) }}#}
+        function showDetails(id){
+
+            $('.page_overlay').css('display', 'block');
+            $('.popup_details_container').css('display', 'block');
+
+            {#url = '{{ path('gcf_front_projectsinglepage', {'id': 'id'} ) }}';#}
+            {#url = url.replace("id", id);#}
+            {#//console.log(url);#}
+            {#$.ajax({#}
+                {#url: url,#}
+                {#data: {'details-projet': 'test'},#}
+                {#type: 'POST',#}
+                {#dataType: 'json',#}
+                {#success: function (result) {#}
+                    {#console.log(result);#}
+
+                    {#var toAppend = '';#}
+                    {#toAppend = '<table class="table table-striped table-bordered">';#}
+                    {#toAppend +=  '</table>';#}
+
+                    {#$('.popup_details_container_inner').append(toAppend);#}
+
+                {#},#}
+                {#error: function (error) {#}
+                    {#alert(error);#}
+                    {#console.log(error);#}
+                {#}#}
+            {#});#}
+
+
+        }
+
+        function closePop() {
+
+            $('.page_overlay').css('display', 'none');
+
+            $('.popup_details_container').css('display', 'none');
+
+        }
     </script>
 {% endblock %}
 
