--- a/src/GCF/FrontBundle/Resources/views/Default/index.html.twig
+++ b/src/GCF/FrontBundle/Resources/views/Default/index.html.twig
@@ -1,12 +1,27 @@
 {% extends "@GCFFront/base.html.twig" %}
 
-{% block body %}
+
+{% block stylesheets %}
 
     <style>
         *{
             -webkit-transition-duration: 0.5s;
             transition-duration: 0.5s;
         }
+
+        .project_number_by_sectors .project_container{padding: 15px 8px; }
+        .project_number_by_sectors .project_icon{  max-width: 70px; margin-bottom:  5px; border: solid 2px transparent; border-radius: 50%; padding: 5px; cursor: pointer;}
+        .project_number_by_sectors .project_icon:hover{ border: solid 2px #aaaaaa; }
+        .project_number_by_sectors .project_name{ text-decoration: none; font-size: 13px; font-weight: 600;}
+        .project_number_by_sectors .project_number{}
+
+        .slick-prev:before, .slick-next:before{color:gray !important;}
+        .slick-prev:before, .slick-next:before{color:gray !important;}
+
+        .slick-next{right: 0 !important;}
+        .slick-prev{left:0 !important;}
+
+
         .section_title {
             margin: 0 0 10px;
             padding-left: 10px;
@@ -18,12 +33,12 @@
 
         .projects_news .description { font-size: 13px; margin: 0 }
 
-        .button_see_more {
-            border-radius: 0 !important;
-            background: #7ac943!important;
-            color: white !important;
-            font-size: 13px !important;
-        }
+        /*.button_see_more {*/
+        /*border-radius: 0 !important;*/
+        /*background: #7ac943!important;*/
+        /*color: white !important;*/
+        /*font-size: 13px !important;*/
+        /*}*/
 
         .read_more_container { text-align: right;  margin-top: 10px; }
 
@@ -52,6 +67,50 @@
         }
     </style>
 
+{% endblock %}
+
+
+ {% block PBS %}
+     <div class="project_number_by_sectors" style="margin-bottom: 40px;">
+         <div class="container">
+             <div class="col-md-12 slider slider_projects" >
+
+
+                 {% for key, nb_by_proj in nbr_by_project %}
+                 <div class="col-md-2 col-sm-2 col-sm-offset-1 col-md-offset-1 project_container">
+                     <center><img class="project_icon" src="{{ asset('assets/images/agriculture.png') }}" alt="Agriculture"> <br>
+                         <a class="project_name" href="#">P.{{ key }}</a>
+                         <span class="badge project_number">{{ nb_by_proj  }}</span></center>
+                 </div>
+                 {% endfor %}
+                 {#<div class="col-md-2 col-sm-2 project_container">#}
+                     {#<center><img class="project_icon" src="{{ asset('assets/images/Infrastructure-3.png') }}" alt="Infrastructure"> <br>#}
+                         {#<a class="project_name" href="#"> P Infrastructure </a>#}
+                         {#<span class="badge project_number">20</span></center>#}
+                 {#</div>#}
+                 {#<div class="col-md-2 col-sm-2 project_container">#}
+                     {#<center><img class="project_icon" src="{{ asset('assets/images/energie-1.png') }}" alt="Energie"> <br>#}
+                         {#<a class="project_name" href="#">P Energie </a>#}
+                         {#<span class="badge project_number">15</span> </center>#}
+                 {#</div>#}
+                 {#<div class="col-md-2 col-sm-2 project_container">#}
+                     {#<center><img class="project_icon" src="{{ asset('assets/images/dechets.png') }}" alt="Dechets"> <br>#}
+                         {#<a class="project_name" href="#">P Déchets </a>#}
+                         {#<span class="badge project_number">12</span></center>#}
+                 {#</div>#}
+                 {#<div class=" col-md-2 col-sm-2 project_container">#}
+                     {#<center><img class="project_icon" src="{{ asset('assets/images/sante-1.png') }}" alt="Santé"><br>#}
+                         {#<a class="project_name" href="#" >P Santé </a>#}
+                         {#<span class="badge project_number">20</span></center>#}
+                 {#</div>#}
+             </div>
+         </div>
+     </div>
+ {% endblock %}
+
+{% block body %}
+
+
     <div class="col-md-12 col-sm-12" style="margin-bottom: 50px;    padding: 0;">
 
         <div class="projects_news">
@@ -65,7 +124,7 @@
                     <div class="row">
                         <div class="col-md-3 col-sm-3 col-xs-3 single_element_image_container">
                             <a href="#">
-                                <img class="img-fluid" src="http://placehold.it/100x100" />
+                                <img class="img-fluid" src="https://placeimg.com/100/100/nature/any/blur" />
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
@@ -79,7 +138,7 @@
                     <div class="row">
                         <div class="col-md-3 col-sm-3 col-xs-3 single_element_image_container" >
                             <a href="#">
-                                <img class="img-fluid" src="http://placehold.it/100x100" />
+                                <img class="img-fluid" src="https://placeimg.com/640/480/nature/grayscale" />
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
@@ -93,7 +152,7 @@
                     <div class="row">
                         <div class="col-md-3 col-sm-3 col-xs-3 single_element_image_container" >
                             <a href="#">
-                                <img class="img-fluid" src="http://placehold.it/100x100" />
+                                <img class="img-fluid" src="https://placeimg.com/100/100/nature/any/blur" />
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
@@ -104,7 +163,7 @@
                     </div>
                 </div>
                 <div class="col-md-12 item" style=" text-align: right;">
-                    <button class="btn btn-default button_see_more">Voir Plus</button>
+                    <button class="button_see_more">Voir Plus</button>
                 </div>
             </div>
 
@@ -118,7 +177,7 @@
                     <div class="row">
                         <div class="col-md-3 col-sm-3 col-xs-3 single_element_image_container" >
                             <a href="#">
-                                <img class="img-fluid" src="http://placehold.it/100x100" />
+                                <img class="img-fluid" src="https://placeimg.com/100/100/tech/any/blur" />
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
@@ -133,7 +192,7 @@
                     <div class="row">
                         <div class="col-md-3 col-sm-3 col-xs-3 single_element_image_container" >
                             <a href="#">
-                                <img class="img-fluid" src="http://placehold.it/100x100" />
+                                <img class="img-fluid" src="https://placeimg.com/100/100/people/any/blur" />
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
@@ -148,7 +207,7 @@
                     <div class="row">
                         <div class="col-md-3 col-sm-3 col-xs-3 single_element_image_container" >
                             <a href="#">
-                                <img class="img-fluid" src="http://placehold.it/100x100" />
+                                <img class="img-fluid" src="https://placeimg.com/100/100/animals/any/blur" />
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
@@ -160,7 +219,7 @@
                     </div>
                 </div>
                 <div class="col-md-12 item" style="text-align: right;">
-                    <button class="btn btn-default button_see_more">Voir Plus</button>
+                    <button class=" button_see_more">Voir Plus</button>
                 </div>
             </div>
 
@@ -174,7 +233,7 @@
                     <div class="row">
                         <div class="col-md-3 col-sm-3 col-xs-3 single_element_image_container" >
                             <a href="#">
-                                <img class="img-fluid" src="http://placehold.it/100x100" />
+                                <img class="img-fluid" src="https://placeimg.com/100/100/arch/any/blur" />
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
@@ -189,7 +248,7 @@
                     <div class="row">
                         <div class="col-md-3 col-sm-3 col-xs-3 single_element_image_container"  >
                             <a href="#">
-                                <img class="img-fluid" src="http://placehold.it/100x100" />
+                                <img class="img-fluid" src="https://placeimg.com/100/100/tech/any/blur" />
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
@@ -204,7 +263,7 @@
                     <div class="row">
                         <div class="col-md-3 col-sm-3 col-xs-3 single_element_image_container" >
                             <a href="#">
-                                <img class="img-fluid" src="http://placehold.it/100x100" />
+                                <img class="img-fluid" src="https://placeimg.com/100/100/nature/any/blur" />
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
@@ -216,7 +275,7 @@
                     </div>
                 </div>
                 <div class="col-md-12 item " style="text-align: right;">
-                    <button class="btn btn-default button_see_more">Voir Plus</button>
+                    <button class=" button_see_more">Voir Plus</button>
                 </div>
             </div>
 
@@ -230,7 +289,7 @@
                     <div class="row">
                         <div class="col-md-3 col-sm-3 col-xs-3 single_element_image_container" >
                             <a href="#">
-                                <img class="img-fluid" src="http://placehold.it/100x100" />
+                                <img class="img-fluid" src="https://placeimg.com/100/100/nature/any/blur" />
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
@@ -244,7 +303,7 @@
                     <div class="row">
                         <div class="col-md-3 col-sm-3 col-xs-3 single_element_image_container" >
                             <a href="#">
-                                <img class="img-fluid" src="http://placehold.it/100x100" />
+                                <img class="img-fluid" src="https://placeimg.com/100/100/nature/any/blur" />
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
@@ -258,7 +317,7 @@
                     <div class="row">
                         <div class="col-md-3 col-sm-3 col-xs-3 single_element_image_container" >
                             <a href="#">
-                                <img class="img-fluid" src="http://placehold.it/100x100"/>
+                                <img class="img-fluid" src="https://placeimg.com/100/100/nature/any/blur"/>
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
@@ -269,7 +328,7 @@
                     </div>
                 </div>
                 <div class="col-md-12 item" style="text-align: right;">
-                    <button class="btn btn-default button_see_more">Voir Plus</button>
+                    <button class=" button_see_more">Voir Plus</button>
                 </div>
             </div>
 
@@ -287,7 +346,7 @@
                     <div class="row">
                         <div class="col-md-12 col-lg-5 col-xs-5">
                             <a href="#">
-                                <img class="img-fluid" src="http://placehold.it/200x200" style="max-width: 100%;max-height: 100%"/>
+                                <img class="img-fluid" src="https://placeimg.com/200/200/nature/any/blur" style="max-width: 100%;max-height: 100%"/>
                             </a>
                         </div>
                         <div class="col">
@@ -300,7 +359,7 @@
                 <div class="col-sm-6 item" style="background: #f7f7f7;border: solid 2px white;">
                     <div class="row">
                         <div class="col-md-12 col-lg-5 col-xs-5"><a href="#">
-                                <img class="img-fluid" src="http://placehold.it/200x200" style="max-width: 100%;max-height: 100%"/></a>
+                                <img class="img-fluid" src="https://placeimg.com/200/200/nature/any/blur" style="max-width: 100%;max-height: 100%"/></a>
                         </div>
                         <div class="col">
                             <h4 class="name">Article 2</h4>
@@ -312,7 +371,7 @@
                 <div class="col-sm-6 item" style="background: #f7f7f7;border: solid 2px white;">
                     <div class="row">
                         <div class="col-md-12 col-lg-5 col-xs-5"><a href="#">
-                                <img class="img-fluid" src="http://placehold.it/200x200" style="max-width: 100%;max-height: 100%"/></a>
+                                <img class="img-fluid" src="https://placeimg.com/200/200/nature/any/blur" style="max-width: 100%;max-height: 100%"/></a>
                         </div>
                         <div class="col">
                             <h4 class="name">Article 3</h4>
@@ -324,7 +383,7 @@
                 <div class="col-sm-6 item" style="background: #f7f7f7;border: solid 2px white;">
                     <div class="row">
                         <div class="col-md-12 col-lg-5 col-xs-5"><a href="#">
-                                <img class="img-fluid" src="http://placehold.it/200x200" style="max-width: 100%;max-height: 100%"/></a>
+                                <img class="img-fluid" src="https://placeimg.com/200/200/nature/any/blur" style="max-width: 100%;max-height: 100%"/></a>
                         </div>
                         <div class="col">
                             <h4 class="name">Article 4</h4>
@@ -335,10 +394,37 @@
                 </div>
             </div>
             <div class="row read_more_container col-sm-12">
-                <button class="btn btn-default btn-group-lg button_see_more">Voir Plus
+                <button class="button_see_more_lg">Voir Plus
                 </button>
             </div>
         </div>
     </div>
 {% endblock %}
 
+{% block javascripts %}
+    <script>
+        $('.slider_projects').slick({
+            dots: false,
+            slidesToShow: 5,
+            slidesToScroll: 1,
+            touchMove: false,
+            autoplay: true,
+            autoplaySpeed: 5000,
+            responsive: [
+                {
+                    breakpoint: 1023,
+                    settings: {
+                        speed: 10,
+                        slidesToShow: 3,
+                        slidesToScroll: 1,
+                        arrows: false,
+                        touchMove: false,
+                        autoplay:true,
+                        autoplaySpeed:5000
+
+                    }
+                },
+            ]
+        });
+    </script>
+{% endblock %}
