--- a/src/GCF/FrontBundle/Resources/views/Default/Elearning/e-learning.html.twig
+++ b/src/GCF/FrontBundle/Resources/views/Default/Elearning/e-learning.html.twig
@@ -88,7 +88,7 @@
                 <div class="col-md-6 col-sm-6 col-xs-12"
                      style="background: #f2fffc;border: solid white; padding-top: 10px; padding-bottom:10px ">
                     <div class="row">
-                        <div class="col-md-5"><a href="#"><iframe style="max-width: 100%;max-height: 100%" src="https://www.youtube.com/embed/NBRLeyI9Dfk?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></a></div>
+                        <div class="col-md-5" style="padding: 0 "><a href="#"><iframe   style="max-width: 100%;max-height: 100%" src="https://www.youtube.com/embed/NBRLeyI9Dfk?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></a></div>
 
                         <div class="col-md-7">
                             <h4 class="name">Publication Titre</h4>
@@ -98,26 +98,6 @@
                         </div>
                     </div>
                 </div>
-
-
-                {#<div class="col-md-6 col-sm-6 col-xs-12">#}
-                    {#<div class="listing">#}
-                        {#<h4>Vidéo titre</h4>#}
-                        {#<div class="type">#}
-                            {#<a>#}
-                                {#<img id="open_modal_read_video" src="{{ asset('assets/images/YouTube-icon.png') }}" title="Lire la vidéo">#}
-                            {#</a>#}
-                        {#</div>#}
-                        {#<p>Date de publication : 2018</p>#}
-                        {#<div class="details">#}
-                            {#<p><strong>Adresse :</strong> Lorem ipsum</p>#}
-                            {#<p><strong>Type :</strong> Lorem ipsum dolor </p>#}
-                            {#<p><strong>Focus :</strong>Lorem</p>#}
-                            {#<p><strong>Secteur :</strong>ipsum</p>#}
-                            {#<p><strong>Mots clés :</strong>Lorem ipsum, Lorem ipsum dolor sit amet, Lorem dolor, ipsum, Lorem, amet</p>#}
-                        {#</div>#}
-                    {#</div>#}
-                {#</div>#}
 
             {% endfor %}
 
