--- a/web/assets/main.css
+++ b/web/assets/main.css
@@ -207,6 +207,11 @@ header and top bar
 
 }
 
+
+.green_Blogger_btn{ cursor:pointer; padding: 5px 10px !important; border-radius: 2px; margin: 0px auto;background: rgba(122, 201, 67, 1);}
+.affix .green_Blogger_btn{ padding-bottom: 5px !important;  padding-top: 5px !important; margin: 5px 0; }
+
+.green_Blogger_btn:hover{ background: white !important; }
 .custom_carousel_caption{width: 100% }
 .carousel-inner .item > img{width:100%;max-height: 600px;min-height: 500px}
 .slogan_banner_img{  max-width: 400px; }
